[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scripts/victory.gd" id="1_k9m7p"]
[ext_resource type="FontFile" uid="uid://deg2678b2066r" path="res://Assets/Font/Minecraft.ttf" id="2_l8n5q"]

[node name="Victory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k9m7p")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.2, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_l8n5q")
theme_override_font_sizes/font_size = 48
text = "¡VICTORIA!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_l8n5q")
theme_override_font_sizes/font_size = 24
text = "PUNTUACIÓN: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ContinueButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l8n5q")
theme_override_font_sizes/font_size = 20
text = "SIGUIENTE NIVEL"

[node name="MenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l8n5q")
theme_override_font_sizes/font_size = 20
text = "MENÚ PRINCIPAL"